; ModuleID = '/home/carl/AnghaBench/linux/sound/core/extr_info.c_snd_info_entry_ioctl.c'
source_filename = "/home/carl/AnghaBench/linux/sound/core/extr_info.c_snd_info_entry_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.snd_info_private_data* }
%struct.snd_info_private_data = type { i32, %struct.snd_info_entry* }
%struct.snd_info_entry = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i64 (%struct.snd_info_entry*, i32, %struct.file*, i32, i64)* }

@ENOTTY = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.file*, i32, i64)* @snd_info_entry_ioctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @snd_info_entry_ioctl(%struct.file* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.file*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca %struct.snd_info_private_data*, align 8
  %9 = alloca %struct.snd_info_entry*, align 8
  store %struct.file* %0, %struct.file** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  %10 = load %struct.file*, %struct.file** %5, align 8
  %11 = getelementptr inbounds %struct.file, %struct.file* %10, i32 0, i32 0
  %12 = load %struct.snd_info_private_data*, %struct.snd_info_private_data** %11, align 8
  store %struct.snd_info_private_data* %12, %struct.snd_info_private_data** %8, align 8
  %13 = load %struct.snd_info_private_data*, %struct.snd_info_private_data** %8, align 8
  %14 = getelementptr inbounds %struct.snd_info_private_data, %struct.snd_info_private_data* %13, i32 0, i32 1
  %15 = load %struct.snd_info_entry*, %struct.snd_info_entry** %14, align 8
  store %struct.snd_info_entry* %15, %struct.snd_info_entry** %9, align 8
  %16 = load %struct.snd_info_entry*, %struct.snd_info_entry** %9, align 8
  %17 = getelementptr inbounds %struct.snd_info_entry, %struct.snd_info_entry* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i64 (%struct.snd_info_entry*, i32, %struct.file*, i32, i64)*, i64 (%struct.snd_info_entry*, i32, %struct.file*, i32, i64)** %20, align 8
  %22 = icmp ne i64 (%struct.snd_info_entry*, i32, %struct.file*, i32, i64)* %21, null
  br i1 %22, label %26, label %23

23:                                               ; preds = %3
  %24 = load i64, i64* @ENOTTY, align 8
  %25 = sub nsw i64 0, %24
  store i64 %25, i64* %4, align 8
  br label %41

26:                                               ; preds = %3
  %27 = load %struct.snd_info_entry*, %struct.snd_info_entry** %9, align 8
  %28 = getelementptr inbounds %struct.snd_info_entry, %struct.snd_info_entry* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 0
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %29, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 0
  %32 = load i64 (%struct.snd_info_entry*, i32, %struct.file*, i32, i64)*, i64 (%struct.snd_info_entry*, i32, %struct.file*, i32, i64)** %31, align 8
  %33 = load %struct.snd_info_entry*, %struct.snd_info_entry** %9, align 8
  %34 = load %struct.snd_info_private_data*, %struct.snd_info_private_data** %8, align 8
  %35 = getelementptr inbounds %struct.snd_info_private_data, %struct.snd_info_private_data* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 8
  %37 = load %struct.file*, %struct.file** %5, align 8
  %38 = load i32, i32* %6, align 4
  %39 = load i64, i64* %7, align 8
  %40 = call i64 %32(%struct.snd_info_entry* %33, i32 %36, %struct.file* %37, i32 %38, i64 %39)
  store i64 %40, i64* %4, align 8
  br label %41

41:                                               ; preds = %26, %23
  %42 = load i64, i64* %4, align 8
  ret i64 %42
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
